--- a/text.html
+++ b/text.html
@@ -1,7 +1,14 @@
-
+<!DOCTYPE html>
+<html>
+<head><title>Test Page</title></head>
+<body>
 <h1>Hey. I am a big heading</h1>
-<p>Hey. I'm a paragraph elements</p>
+<p>Hey. I'm a <b>paragraph</b> elements. Cool huh?</p>
 <a href="https://google.com" target="_blank" title="Let's go to Google">Click me! I'm a link</a>
-
+<p>My name is a Eyeglasses<br>
+You can search me on <b>google</b></p>
+<img src="D:\canva\frd.jpg">
+</body>
+</html>
 
 
